Fix icon css too small

--- a/modules/mod_akquickicons/css/akquickicons.css
+++ b/modules/mod_akquickicons/css/akquickicons.css
@@ -10,8 +10,8 @@
 	background-position: -30px;
 	display: block;
 	float: left;
-	height: 103px;
-	width: 108px;
+	height: 130px;
+	width: 130px;
 	padding: 7px;
 	vertical-align: middle;
 	text-decoration: none;
